* jargon-security - code for use with Spring security
* jargon-user-tagging - code for using free tagging and other metadata metaphors on top of iRODS
* jargon-transfer - transfer manager for managing and synchronizing data with iRODS

Other libraries are planned, such as connection pooling, as well as administrative functions.

==Requirements==

-Jargon depends on Java 1.6+
-Jargon is built using Apache Maven2, see POM for dependencies
-Jargon supports iRODS 2.4 through iRODS 3.0, and is tested with the current (as of release time) development version of iRODS

==Libraries==


Jargon-core uses Maven for dependency management.  See the pom.xml file for references to various dependencies.

Note that the following bug and feature requests are logged in GForge with related commit information [[https://code.renci.org/gf/project/jargon/tracker/]]


==Bug Fixes==

 [#621] error reading file w/group permissions
 [#627] Catch an NPE that might arise when transferring a file via streams when no resource in the iRODS file and iRODS has no default.  This was happening on a close() of the stream.
 [#629] malloc/resource error in irods when doing findDomainByMetadataQuery - added test for field-reported issue with metadata queries
 [#630] execute msiDataObjGet via Jargon - enhanced support for resource setting and overwrite options for client side get and put operations via rules, especially for parallel transfers resulting from client-side actions
 [#639] 809000 errors on delete operations when trash file already exists

==Features==

[#542] Ticket system support
- added a ProtocolExtensionPoint to the org.irods.jargon.core.pub access objects to allow higher level packages to handle packing instructions
- added jargon-ticket subproject for ticket admin support, along with unit testing of ticket system
[#625] Akubra intitial development
- additional URI utility methods for use in Akubra