@@ -190,7 +190,7 @@
 			<dependency>
 				<groupId>commons-io</groupId>
 				<artifactId>commons-io</artifactId>
-				<version>2.0.1</version>
+				<version>2.1</version>
 			</dependency>
 			<dependency>
 				<groupId>dom4j</groupId>
